fixed top arrow on spellbook spells being misaligned

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -800,7 +800,7 @@ body {
     width: 32.5%;
 }
 .book_widen {
-    width: 78.25%;
+    width: 100%;
 }
 .book_action {
     width: 20%;
